; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_webvttdec.c_webvtt_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_webvttdec.c_webvtt_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@.str = private unnamed_addr constant [7 x i8] c"WEBVTT\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"\0A\0D\09 \00", align 1
@AVPROBE_SCORE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @webvtt_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @webvtt_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @AV_RB24(i32* %8)
  %10 = icmp eq i32 %9, 15711167
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 3
  store i32* %13, i32** %4, align 8
  br label %14

14:                                               ; preds = %11, %1
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @strncmp(i32* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 6)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %31, label %18

18:                                               ; preds = %14
  %19 = load i32*, i32** %4, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 6
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %18
  %24 = load i32*, i32** %4, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 6
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @strchr(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %23, %18
  %30 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  store i32 %30, i32* %2, align 4
  br label %32

31:                                               ; preds = %23, %14
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %29
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @AV_RB24(i32*) #1

declare dso_local i32 @strncmp(i32*, i8*, i32) #1

declare dso_local i64 @strchr(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
